--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab_2_modular)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(lab_2_modular main.cpp citire.cpp afisare.cpp secv4.cpp secv5.cpp)
+add_executable(lab_2_modular main.cpp citire.cpp afisare.cpp secv4.cpp secv5.cpp tests.cpp tests.h)
